fixed the overlapping in parameters

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -450,6 +450,11 @@ div.reference-subgroup {
   outline: none !important;
 }
 
+.params ul li {
+  display: flex;
+  justify-content: space-between;
+}
+
 .paramname {
   display: inline-block;
   width: 8em;
